# hft-backtest-engine

./: .gitignore  CMakeLists.txt  README.md  design.md
benchmarks/: bench_order_book.cpp  feed_throughput.cpp
src/core/: market_data.hpp  order_book.cpp  order_book.hpp  ring_buffer.hpp
src/engine/: event_loop.cpp  event_loop.hpp  imbalance_strategy.hpp  strategy_example.cpp  strategy_interface.hpp
src/feed/: binary_parser.cpp  binary_parser.hpp  feed_handler.cpp  feed_handler.hpp
src/replay/: mmap_replay.cpp  mmap_replay.hpp
src/risk/: risk_manager.hpp
src/tools/: generate_feed.cpp  run_backtest.cpp
src/util/: cpu_affinity.hpp  memory_pool.hpp  timer.hpp
tests/: integration_event_loop.cpp  unit_order_book.cpp  unit_ring_buffer.cpp
